--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p></p>
       <div id="links-container" style="margin-bottom: 20px; margin-top: 10px;">
         <span class="resume">
-          <a class="iconlink" target="_blank" href="https://github.com/HarshitCodex/">
+          <a class="iconlink" target="_blank" href="https://harshitcodex.github.io/assets/Resume_Mar30_Portfolio.pdf">
             <i class="fa fa-file-pdf-o icons"></i>
           </a>
         </span>
