--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>
       <div>I also love to play sports 🏀 and explore places 🏔️.</div>
       <p></p>
-      <div>Check out the links below to know me better! &#128151 </div>
+      <div>Check out the links below to know me better! &#128513; </div>
       </p>
       <p></p>
       <div id="links-container" style="margin-bottom: 20px; margin-top: 10px;">
