--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p>
         Hi ! I'm <strong>Harshit</strong> a junior year CSE student at <a
           class="link small-link highlight" href="http://nitt.edu"><strong>NIT Trichy</strong></a>, one of India's premier institutes.<br><br>
-        I am a programming enthusiast with with keen interest in <strong>competitive coding, machine learning and software development.</strong></p>
+        I am a programming enthusiast with keen interest in <strong>competitive coding, machine learning and software development.</strong></p>
       <p>
       <div>I also love to play sports 🏀 and explore places 🏔️.</div>
       <p></p>
