--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>HARSHIT AGRAWAL</h1>
       <div id="line"></div>
       <p>
-        Hi ! I'm <strong>Harshit</strong> a junior year CSE student at <a
+        Hi ! I'm <strong>Harshit</strong> a final year CSE student at <a
           class="link small-link highlight" href="http://nitt.edu"><strong>NIT Trichy</strong></a>, one of India's premier institutes.<br><br>
         I am a programming enthusiast with keen interest in <strong>competitive coding, machine learning and software development.</strong></p>
       <p>
@@ -35,7 +35,7 @@
       <p></p>
       <div id="links-container" style="margin-bottom: 20px; margin-top: 10px;">
         <span class="resume">
-          <a class="iconlink" target="_blank" href="https://harshitcodex.github.io/assets/Resume_harshit.pdf">
+          <a class="iconlink" target="_blank" href="https://harshitcodex.github.io/assets/Resume_Harshit.pdf">
             <i class="fa fa-file-pdf-o icons"></i>
           </a>
         </span>
