Updated the basic information and brief summary.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
       <h1>HARSHIT AGRAWAL</h1>
       <div id="line"></div>
       <p>
-        Hi ! I'm <strong>Harshit</strong> a final year CSE student at <a
-          class="link small-link highlight" href="http://nitt.edu"><strong>NIT Trichy</strong></a>, one of India's premier institutes.<br><br>
-        I am a programming enthusiast with keen interest in <strong>competitive coding, machine learning and software development.</strong></p>
+        Hi ! I'm <strong>Harshit</strong> a SWE-III at Google India, Bengaluru. I am a part of Google Workspace Platform
+        team which deals which large scale infrastructure of Google Workspace as a platform and serves millions of users
+        worldwide.<br><br>
+        I am a software professional with keen interest in <strong>fullstack development, data-intensive system design,
+          algorithmic programming and machine learning.</strong></p>
       <p>
       <div>I also love to play sports 🏀 and explore places 🏔️.</div>
       <p></p>
